--- a/vignettes/Introduction.Rmd
+++ b/vignettes/Introduction.Rmd
@@ -146,13 +146,13 @@ In the final simulated example, we assess `totalvis`' ability to correctly ident
 ```{r fig.width=6.5, fig.height = 4.5}
 ## Generate data
 set.seed(2021)
-X <- MASS::mvrnorm(n = 1000, mu = c(2, 2), 
-                   Sigma = matrix(c(1, 0.8, 0.8, 1), nrow = 2))
+X <- mvrnorm(n = 1000, mu = c(2, 2), 
+             Sigma = matrix(c(1, 0.8, 0.8, 1), nrow = 2))
 colnames(X) <- c("X1", "X2")
 y = as.factor((X[, 1] + rnorm(1000, 0, 0.1)) > 1.5)  
 
 ## Train model, plot pdp_pca
-mod <- train(X, y , method = "nnet", trace = F)
+mod <- train(X, y , method = "nnet", trace = FALSE)
 ```
 
 To relate the total effect of  group of predictors to a covariate of interest, we make use of the 'pin' argument, which offers a more interpretable x-axis. In this case, we present a 'pinplot' for X2, which is positively related to X1 but does not affect the outcome. As referenced below, the 'pinplot' is not able to distiguish between the effects of correlated predictors.
@@ -197,12 +197,12 @@ crimes <- crimes[, colSums(is.na(crimes)) == 0]
 ## Select a subset of predictors, Convert all columns to numeric, add outcome
 col_start <- which(names(crimes) == "pop")
 end_start <- which(names(crimes) == "pctOfficDrugUnit")
-data <- as.data.frame(sapply(crimes[, col_start:end_start], as.numeric))
+X <- as.data.frame(sapply(crimes[, col_start:end_start], as.numeric))
 outcome <- crimes$murdPerPop
 
 ## Train the model
 set.seed(2021)
-rf_mod <- randomForest(data, outcome, ntree = 5)
+rf_mod <- randomForest(X, outcome)
 ```
 
 Visual summaries (partial dependence and ICE plots) are often produced to interpret the effects of the most important features in black-box models. The example uses a `randomForest` model from the `randomForest` package, which has readily available measures of feature importance. We select one of the primary features, 'pctKids2Par', for further exploration.
@@ -216,8 +216,8 @@ In this instance, 'pctKids2Par' presents high correlation with several other pre
 
 ```{r  fig.width=6.5, fig.height = 4.5}
 ## Correlation
-cor_vals <- abs(cor(data[, "pctKids2Par"], 
-                    data[, setdiff(colnames(data), "pctKids2Par")]))
+cor_vals <- abs(cor(X[, "pctKids2Par"], 
+                    X[, setdiff(colnames(X), "pctKids2Par")]))
 hist(cor_vals, breaks = 30, xlab = "abs(correlation)", 
      main = "Correlation with pctKids2Par")
 num <- quantile(cor_vals, 0.8)
@@ -231,7 +231,8 @@ Due to high correlations with our feature of interest, we turn to `totalvis` to 
 
 ```{r fig.width=6.5, fig.height = 4.5}
 ## totalvis plot
-df <- plot(totalvis(rf_mod, data), num_load = 8, legend_cex = 1.0)
+vis_object <- totalvis(rf_mod, X)
+df <- plot(vis_object, num_load = 8, legend_cex = 1.0)
 knitr::kable(df, row.names = F, align = "lc")
 ```
 
@@ -239,17 +240,17 @@ At this point, we associate the total effect with the covariate of interest usin
 
 ```{r fig.width=6.5, fig.height = 4.5}
 ## pinplot
-plot(totalvis(rf_mod, data, pin = "pctKids2Par"))
+plot(totalvis(rf_mod, X, pin = "pctKids2Par"))
 
 ## pdp
-plot(totalvis(rf_mod, data, feature = "pctKids2Par", pc_num = NULL))
+plot(totalvis(rf_mod, X, feature = "pctKids2Par", pc_num = NULL))
 ```
 
 As previously shown, there are a variety of insights to be gleaned for the `partial_effects` plot. In this instance, the lines appear to be shifting in unison and the underlying assumptions of `totalvis` appear to be reasonable. The default is the plot a standardized or 'differenced' version of the predictions, but partial effect lines can also be added to the original `totalvis` plot.
 
 ```{r fig.width=6.5, fig.height = 4.5}
 ## partial_effects (default)
-diag_obj <- partial_effects(rf_mod, data, num_load = 8)
+diag_obj <- partial_effects(rf_mod, X, num_load = 8)
 plot(diag_obj, legend_loc = "left", legend_cex = 0.74)
 
 ## partial_effects (non-differenced)
@@ -262,13 +263,13 @@ Given the reliance of the package on PCA, we offer a wrapper for the `screeplot`
 
 ```{r fig.width=6.5, fig.height = 4.5}
 ## Wrapper to scree plot
-scree_plot(totalvis(rf_mod, data))
+scree_plot(totalvis(rf_mod, X))
 ```
 
 As a final addition to the package, we offer simple ICE curves. The default is to center the curves so they all have the same starting value in order to highlight differences in trajectory. This can be changed with the `center = FALSE` argument
 ```{r fig.width=6.5, fig.height = 4.5}
 ## ice plot (default is centered)
-vis_obj <- totalvis(rf_mod, data, ice = T, feature = "pctKids2Par")
+vis_obj <- totalvis(rf_mod, X, ice = T, feature = "pctKids2Par")
 plot(vis_obj)
 
 ## ice plot (uncentered)
